--- a/.github/workflows/ci-flask.yaml
+++ b/.github/workflows/ci-flask.yaml
@@ -20,7 +20,7 @@ jobs:
       - name: Installing dependecies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requitements.txt
+          pip install -r requirements.txt
 
       - name: Ecoing something
         run: echo "Hurray! Running..."
